trunk/Archive2/f1/7679d2bceb42d8/output
main.cpp:20:22: error: implicit instantiation of undefined template 'varint<unsigned int, void>'
    varint<uint32_t> test = {1};
                     ^
main.cpp:8:45: note: template is declared here
template<typename T,typename E=void> struct varint;
                                            ^
1 error generated.
